Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypePriObjBooleanRetNumObj.quorum
class Main
    action Main
        boolean one = true
        Boolean two
        two:SetValue(true)
        Yoda<boolean, Boolean, Number> yoda
        Number ret = yoda:useForce(one, two)
        output "passed"
     end
end
