Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriBooleanRetNumObjFail.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        boolean two = true
        Yoda<Boolean, boolean, Number> yoda
        boolean wrongRet = yoda(one, two)
     end
end
